labs/lab4/testsuite/good/018.hs
one = 1 ;
main = print ((\ x -> (\ y -> (\ z -> z + 1) y) x) one) ;
