labs/lab4/testsuite/bad/add-functions.hs
f x = x + x;

main = print (f + f); -- operator + not defined for functions
